--- a/index.html
+++ b/index.html
@@ -136,17 +136,32 @@
           <h2 class="section-title work-title">Чем мы занимаемся</h2>
           <ul class="picture-work list">
             <li class="img-work-item">
-              <img src="./image/img11.jpg" alt="верстка" width="370" />
+              <div class="img-position">
+                <img src="./image/img11.jpg" alt="верстка" width="370" />
+                <div class="work-position">
+                  <p class="text-work-item">Десктопные приложения</p>
+                </div>
+              </div>
             </li>
             <li class="img-work-item">
-              <img
-                src="./image/img22.jpg"
-                alt="мобильное приложение"
-                width="370"
-              />
+              <div class="img-position">
+                <img
+                  src="./image/img22.jpg"
+                  alt="мобильное приложение"
+                  width="370"
+                />
+                <div class="work-position">
+                  <p class="text-work-item">Мобильные приложения</p>
+                </div>
+              </div>
             </li>
             <li class="img-work-item">
-              <img src="./image/img33.jpg" alt="дизайн" width="370" />
+              <div class="img-position">
+                <img src="./image/img33.jpg" alt="дизайн" width="370" />
+                <div class="work-position">
+                  <p class="text-work-item">Дизайнерские решения</p>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
