--- a/portfolio.html
+++ b/portfolio.html
@@ -95,26 +95,33 @@
           <ul class="list flex-project">
             <li class="flex-project-item">
               <a href="" class="link">
-                <img
+                <div  class="portfolio-position">
+                  <img
                   src="./image/технокряк.jpg"
                   alt="экран ноутбука с командой"
                   class="flex-img-portfolio"
                   width="370"
                 />
+                <div class="portfolio-text-posinion"><p class="portfolio-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p></div>
+                </div>
                 <div class="flex-project-text">
                 <h3 class="project-link-title">Технокряк</h3>
                 <p class="project-link-item">Веб-сайт</p>
+                
                 </div>
               </a>
             </li>
             <li class="flex-project-item">
               <a href="" class="link">
-                <img
+                <div class="portfolio-position">
+                  <img
                   src="./image/постерновыйорлеан.jpg"
                   alt="двое мужчин играют в баскетбол"
                   class="flex-img-portfolio"
                   width="370"
                 />
+                <div class="portfolio-text-posinion"><p class="portfolio-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p></div>
+                </div>
                 <div class="flex-project-text">
                 <h3 class="project-link-title">
                   Постер <span>New Orlean vs Golden Star</span>
@@ -125,12 +132,15 @@
             </li>
             <li class="flex-project-item">
               <a href="" class="link">
-                <img
+                <div class="portfolio-position">
+                  <img
                   src="./image/ресторан.jpg"
                   alt="изображение рыбы с надписями о ресторане"
                   class="flex-img-portfolio"
                   width="370"
                 />
+                <div class="portfolio-text-posinion"><p class="portfolio-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p></div>
+                </div>
                 <div class="flex-project-text">
                 <h3 class="project-link-title">
                   Ресторан <span>Seafood</span>
@@ -140,12 +150,15 @@
             </li>
             <li class="flex-project-item">
               <a href="" class="link">
-                <img
+                <div class="portfolio-position"> 
+                  <img
                   src="./image/проектпраим.jpg"
                   alt="наушники"
                   class="flex-img-portfolio"
                   width="370"
                 />
+                <div class="portfolio-text-posinion"><p class="portfolio-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p></div>
+                </div>
                 <div class="flex-project-text">
                 <h3 class="project-link-title">Проект <span>Prime</span></h3>
                 <p class="project-link-item">Маркетинг</p></div>
@@ -153,12 +166,15 @@
             </li>
             <li class="flex-project-item">
               <a href="" class="link">
-                <img
+               <div class="portfolio-position">
+                  <img
                   src="./image/проекткоробка.jpg"
                   alt="две картонных коробки"
                   class="flex-img-portfolio"
                   width="370"
                 />
+                <div class="portfolio-text-posinion"><p class="portfolio-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p></div>
+               </div>
                 <div class="flex-project-text">
                 <h3 class="project-link-title">Проект <span>Boxes</span></h3>
                 <p class="project-link-item">Приложение</p></div>
@@ -166,12 +182,15 @@
             </li>
             <li class="flex-project-item">
               <a href="" class="link">
-                <img
+               <div class="portfolio-position">
+                  <img
                   src="./image/вдохновение.jpg"
                   alt="экран монитора с картой мира"
                   class="flex-img-portfolio"
                   width="370"
                 />
+                <div class="portfolio-text-posinion"><p class="portfolio-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p></div>
+               </div>
                 <div class="flex-project-text">
                 <h3 class="project-link-title">
                   <span>Inspiration has no Borders</span>
@@ -181,12 +200,15 @@
             </li>
             <li class="flex-project-item">
               <a href="" class="link">
-                <img
+              <div class="portfolio-position">
+                  <img
                   src="./image/издание.jpg"
                   alt="разворот книги"
                   class="flex-img-portfolio"
                   width="370"
                 />
+                <div class="portfolio-text-posinion"><p class="portfolio-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p></div>
+              </div>
                 <div class="flex-project-text">
                 <h3 class="project-link-title">
                   Издание <span>Limited Edition</span>
@@ -196,12 +218,15 @@
             </li>
             <li class="flex-project-item">
               <a href="" class="link">
-                <img
+               <div class="portfolio-position">
+                  <img
                   src="./image/проектлаб.jpg"
                   alt="бумажная этикетка"
                   class="flex-img-portfolio"
                   width="370"
                 />
+                <div class="portfolio-text-posinion"><p class="portfolio-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p></div>
+               </div>
                 <div class="flex-project-text">
                 <h3 class="project-link-title">Проект <span>LAB</span></h3>
                 <p class="project-link-item">Маркетинг</p></div>
@@ -209,12 +234,15 @@
             </li>
             <li class="flex-project-item">
               <a href="" class="link">
-                <img
+               <div class="portfolio-position"> 
+                  <img
                   src="./image/бизнес.jpg"
                   alt="мужчина работает на ноутбуке"
                   class="flex-img-portfolio"
                   width="370"
                 />
+                <div class="portfolio-text-posinion"><p class="portfolio-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p></div>
+               </div>
                 <div class="flex-project-text">
                 <h3 class="project-link-title">
                   <span>Growing Business</span>
