--- a/portfolio.html
+++ b/portfolio.html
@@ -94,7 +94,7 @@
 
           <ul class="list flex-project">
             <li class="flex-project-item">
-              <a href="" class="link">
+              <a href="" class="link  portfolio-link">
                 <div  class="portfolio-position">
                   <img
                   src="./image/технокряк.jpg"
@@ -112,7 +112,7 @@
               </a>
             </li>
             <li class="flex-project-item">
-              <a href="" class="link">
+              <a href="" class="link portfolio-link">
                 <div class="portfolio-position">
                   <img
                   src="./image/постерновыйорлеан.jpg"
@@ -131,7 +131,7 @@
               </a>
             </li>
             <li class="flex-project-item">
-              <a href="" class="link">
+              <a href="" class="link portfolio-link">
                 <div class="portfolio-position">
                   <img
                   src="./image/ресторан.jpg"
@@ -149,7 +149,7 @@
               </a>
             </li>
             <li class="flex-project-item">
-              <a href="" class="link">
+              <a href="" class="link portfolio-link">
                 <div class="portfolio-position"> 
                   <img
                   src="./image/проектпраим.jpg"
@@ -165,7 +165,7 @@
               </a>
             </li>
             <li class="flex-project-item">
-              <a href="" class="link">
+              <a href="" class="link portfolio-link">
                <div class="portfolio-position">
                   <img
                   src="./image/проекткоробка.jpg"
@@ -181,7 +181,7 @@
               </a>
             </li>
             <li class="flex-project-item">
-              <a href="" class="link">
+              <a href="" class="link portfolio-link">
                <div class="portfolio-position">
                   <img
                   src="./image/вдохновение.jpg"
@@ -199,7 +199,7 @@
               </a>
             </li>
             <li class="flex-project-item">
-              <a href="" class="link">
+              <a href="" class="link portfolio-link">
               <div class="portfolio-position">
                   <img
                   src="./image/издание.jpg"
@@ -217,7 +217,7 @@
               </a>
             </li>
             <li class="flex-project-item">
-              <a href="" class="link">
+              <a href="" class="link portfolio-link">
                <div class="portfolio-position">
                   <img
                   src="./image/проектлаб.jpg"
@@ -233,7 +233,7 @@
               </a>
             </li>
             <li class="flex-project-item">
-              <a href="" class="link">
+              <a href="" class="link portfolio-link">
                <div class="portfolio-position"> 
                   <img
                   src="./image/бизнес.jpg"
